Updated navbar and fixed mobile overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
+/* Global styles */
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; /* Hide horizontal overflow on the entire page */
+}
+
 body{
   background: radial-gradient(circle at 0% 0%, rgba(0, 0, 0, 1) 0%, rgb(15, 29, 31) 50%, rgb(5, 1, 5) 100%);
   overflow-x: hidden;
+  width: 100%;
 }
 .App {
   text-align: center;
+}
+@media  screen and (max-width:756px) {
+  body{
+    overflow-x: hidden;
+  }
 }
