--- a/src/component/AboutMe/AboutMe.css
+++ b/src/component/AboutMe/AboutMe.css
@@ -32,6 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 50%;
     height: 100vh;
   }
   .profile_wrapper{
@@ -40,8 +41,8 @@
     background-size: cover;
     background-position: center center;
     mix-blend-mode:hard-light;
-    height: 500px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
     box-shadow: 0 20px 5px 5px rgba(0,0,0,2);
     animation: animate 5s ease-in-out infinite;
     transition: all 1s ease-in-out;
@@ -49,6 +50,9 @@
   @media (max-width:756px) {
     .about-me{
       background: radial-gradient(circle at 0% 0%, rgba(0, 0, 0, 0.863) 45%,rgba(121, 120, 120, 0.788) 40%, rgba(255, 255, 255, 0) 100%);
+    }
+    .profile{
+      width: 100%;
     }
     .profile_wrapper{
       height: 450px;
